fix: overflow on home

--- a/src/modules/home/Home.module.scss
+++ b/src/modules/home/Home.module.scss
@@ -1,9 +1,5 @@
 @import "../../../styles/variables.scss";
 
-.home {
-  overflow-x: hidden;
-}
-
 .wireframe {
   top: 400px;
   z-index: -1;
